[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "pina"
authors = [{ name = "Patrick Heck", email = "fitz_oreilly@outlook.com" }]
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.6"
keywords = ["pinch-analysis", "heat-integration"]

[project.urls]
Home = "https://github.com/FitzOReilly/pina"

[project.optional-dependencies]
dev = [
    "black >=25.1.0",
    "coverage >=7.6.12",
    "flake8 >=7.1.2",
    "isort >=6.0.0",
    "pre-commit >=4.1.0",
    "tox >=4.24.1",
]


[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
