[metadata]
name = pina
version = 0.1.0
description = A lightweight pinch analysis package
long_description = file: README.md
license = MIT
author = Patrick Heck

[options]
include_package_data = True
package_dir = =src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True

[flake8]
max-line-length = 88
max-complexity = 18
select = B, C, E, F, W
ignore = E203, E266, E501, W503
